# FructsClicker

./: .gitignore  pyproject.toml
bot/: bot_settings.py  fruct_bot.py
bot/handlers/: base.py
bot/keyboards/: web_inl_kb.py
bot/other/: bot_sett_comm.py
bot/text/: general.py
fructjustice/: package-lock.json  package.json
fructjustice/src/: App.js  index.js
fructjustice/src/components/general/: MainFooter.css  MainFooter.jsx
fructjustice/src/pages/: GamePage.jsx  ProfilePage.jsx  ShopPage.jsx
